<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginTop="140dp"
        android:background="@android:drawable/edit_text"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:autofillHints="admin" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/edit_text"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:autofillHints="12345" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberPassword"
            android:textSize="14sp"
            android:textColor="#808080"
            android:checked="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/findPassword"
            android:textAlignment="textEnd"
            android:textColor="#808080"
            android:textSize="14sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="#FF9800" />

</LinearLayout>
